<resources>
    <string name="app_name">CarUITestApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="booking">Bookings</string>
    <string name="rentACar">Rent a car</string>
    <string name="location">Location</string>
    <string name="current_location">Current Location</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="now">Now</string>
    <string name="duration">Duration</string>
    <string name="oneHr">1 Hr</string>
    <string name="go">Go</string>
    <string name="search_result">Search Result</string>
    <string name="_300">300+</string>
    <string name="cars_found">cars found</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="mazada">Mazada3</string>
    <string name="halfklaway">0.5 km away</string>
    <string name="rental_fee">Rental fee</string>
    <string name="milage_fee">Milage fee</string>
    <string name="fee_hr">Fr. $3.00/hr</string>
    <string name="kilo">$0.4/km</string>
    <string name="booking_id">Booking ID: 4400299</string>
    <string name="sms1000z">SMS1000Z</string>
    <string name="confirmed">Confirmed</string>
    <string name="start_date">Start Date</string>
    <string name="eleven_am" >11 :45 am</string>
    <string name="monday">Mon, 1 Nov 20</string>
    <string name="end_date">End Date</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="two_hr">20  :  00 hr</string>
    <string name="two_day">02</string>
    <string name="colmn">:</string>
    <string name="zero_hour">00</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="extend">Extend</string>
    <string name="pick_up_car_at">Pick up car at</string>
    <string name="sample_street">194 Puggonol Road P100 Multi Storey Car Park</string>
    <string name="sample_street_block">Level4/ Lot 123-456</string>
    <string name="get_direction">Get Direction</string>
    <string name="ten_plus">10+</string>
    <string name="estimated_total">Estimated Total</string>
    <string name="amount_is_not_final">amount is not final</string>
    <string name="_52_00">$ 52.00</string>
    <string name="cancel_booking">Cancel this booking</string>
    <string name="need_help">Need help?</string>
</resources>