<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="18dp">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintBottom_toBottomOf="@+id/appBarTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/appBarTitle" />

                <TextView
                    android:id="@+id/appBarTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/search_result"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/backBtn"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.cardview.widget.CardView
            android:transitionName="card_view_transition"
            android:id="@+id/userLocationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/topView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_location"
                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical"
                        android:weightSum="2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/location"
                            android:textColor="?android:attr/textColorSecondary"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/current_location"
                            android:textColor="?android:attr/textColorPrimary"
                            android:textSize="16sp" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bottomView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/topView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/dateView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/border_layout">

                            <ImageView
                                android:id="@+id/imageViewDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:src="@drawable/ic_calendar"
                                app:layout_constraintBottom_toBottomOf="@+id/linearLayoutDate"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/linearLayoutDate" />

                            <LinearLayout
                                android:id="@+id/linearLayoutDate"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:orientation="vertical"
                                android:weightSum="2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageViewDate"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/date_and_time"
                                    android:textColor="?android:attr/textColorSecondary"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/now"
                                    android:textColor="?android:attr/textColorPrimary"
                                    android:textSize="16sp" />

                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/durationView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:background="@drawable/border_layout">

                            <ImageView
                                android:id="@+id/imageViewDuration"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:src="@drawable/ic_duration"
                                app:layout_constraintBottom_toBottomOf="@+id/linearLayoutDuration"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/linearLayoutDuration" />

                            <LinearLayout
                                android:id="@+id/linearLayoutDuration"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:orientation="vertical"
                                android:weightSum="2"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageViewDuration"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/duration"
                                    android:textColor="?android:attr/textColorSecondary"
                                    android:textSize="12sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_weight="1"
                                    android:text="@string/oneHr"
                                    android:textColor="?android:attr/textColorPrimary"
                                    android:textSize="16sp" />

                            </LinearLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/border_layout"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/goBtn"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:background="@color/color_green"
                                android:gravity="center"
                                android:text="@string/go"
                                android:textColor="?android:attr/textColorPrimary"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="1"
            android:background="@color/color_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userLocationView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_top_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/car_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/_300"
                    android:textColor="@color/purple_200"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/filter_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/filter_text_view" />

                <TextView
                    android:id="@+id/car_count_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/cars_found"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/car_count"
                    app:layout_constraintStart_toEndOf="@+id/car_count"
                    app:layout_constraintTop_toTopOf="@+id/car_count" />

                <TextView
                    android:id="@+id/filter_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@color/white"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/filter"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/map_text_view"
                    app:layout_constraintEnd_toStartOf="@+id/map_text_view"
                    app:layout_constraintTop_toTopOf="@+id/map_text_view" />

                <TextView
                    android:id="@+id/map_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/map"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_top_view">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/carRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/car_list_item" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


